<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cse"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    android:gravity="center"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_marginTop="25dp"
                    android:src="@drawable/ksrlogo"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="SELECT THE SEMESTER"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/teal_200"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="CSE1"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="CSE2"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester3"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="CSE3"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester4"
                    android:onClick="CSE4"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester5"
                    android:onClick="CSE5"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester6"
                    android:onClick="CSE6"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester7"
                    android:onClick="CSE7"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:text="@string/semester8"
                    android:onClick="CSE8"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>