<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_alignParentBottom="true"
    android:background="@drawable/bg2"
    tools:context=".cse8">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/select">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="100sp"
                    android:layout_height="100sp"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:src="@drawable/ksrlogo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Please Enter Your Respective Grade in the box"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textSize="18dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="NOTE: Enter 'RF' for Arrear Subjects."
                    android:textColor="#E91717"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Professional\nElective - V"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/teal_200"
                    />

                <EditText
                    android:id="@+id/cs8s1"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="110dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:background="@drawable/my_shape"
                    android:inputType="textCapCharacters"
                    android:textAlignment="center"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Open\nElective - III"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="bold"
                    android:textColor="@color/teal_200"
                    />

                <EditText
                    android:id="@+id/cs8s2"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="120dp"
                    android:background="@drawable/my_shape"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:inputType="textCapCharacters"
                    android:textAlignment="center"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Project Work"
                    android:textSize="20dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="bold"
                    android:textColor="@color/teal_200"
                    />

                <EditText
                    android:id="@+id/cs8s3"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="110dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:background="@drawable/my_shape"
                    android:inputType="textCapCharacters"
                    android:textAlignment="center"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="RESULT"
                    android:textSize="20dp"
                    android:layout_marginLeft="50dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textStyle="bold"
                    android:textColor="@color/teal_200"
                    />

                <EditText
                    android:id="@+id/cs8res"
                    android:layout_width="130dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="50dp"
                    android:background="@drawable/result"
                    android:textAlignment="center"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="40dp"
                >

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#0CF416"
                    android:text="@string/okbtn"
                    android:fontFamily="sans-serif-condensed-medium"
                    tools:ignore="TextSizeCheck" />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn2"
                    android:text="@string/clearbtn"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="#F61505"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>